# qa.guru.homework_16

./: pyproject.toml
