[tool.poetry]
name = "qa-guru-homework-16"
version = "0.1.0"
description = ""
authors = ["Lev Savinkov <lsavinkov@alfabank.ru>"]
readme = "README.md"
packages = [{include = "qa"}]

[tool.poetry.dependencies]
python = "^3.12"
selene = "2.0.0rc9"
pytest = "8.3.3"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
